Refactoring of demo app for REST tutorial

--- a/apps/snippets/opa.conf
+++ b/apps/snippets/opa.conf
@@ -2,6 +2,7 @@ snippets.controller:
 	import snippets.view
 	import snippets.model
 	src/controller.opa
+	src/stdlib.opa
 
 snippets.view:
 	import snippets.model
